bobcat (1.13.2)

  * (Still only available from the svp repository)

  * Member function template implementations consisting of a single line of
    code were given the `inline' specification.

  * added missing  bobcat/tablespec to table/table. Also changed leftover
    String into string

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 28 Mar 2007 14:22:16 +0200

bobcat (1.13.1)

  * All function/member/constructor throw() specifications removed, following
    Sutter & Alexandrescu's suggestions (except where required by external
    classes, like std::exception.

  * RefCount's header missed `public:'. Repaired, thus making relase() et
    al. public members, conform the RefCount manual page.

  * Added template class `AutoPtr'

  * Added template classes FnWrap1, FnWrap1c, FnWrap2, FnWrap2c, obsoleting 
    Wrap1, Wrap1c, Wrap2, Wrap2c. Classes previously depending on the Wrap*
    classes were modified accordingly: they now use FnWrap*

bobcat (1.12.1)

  * inline virtual destructors have an explicit `inline' mentioned in their
    class interfaces to prevent compilation problems caused by a small g++
    (4.1.2) bug.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 30 Nov 2006 13:26:52 +0100

bobcat (1.12.0)

  * All classes have their inline-functions moved out of the interface. They
    are now implemented inline below the interface itself.

    X2a now has a copy constructor and an overloaded assignment operator

    A2x now has a copy constructor (which was announced in the man-page, but
    was never implemented).

    Table's functionality has been enlarged. Consult its manpage for details
    
    Redirector's `accessVia' member is now deprecated. Instead `swallow'
    should be used.

    The String class's object member functions are now deprecated. Instead
    static member functions have been defined offering the same
    functionality. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 15 Nov 2006 19:25:49 +0100

bobcat (1.11.0)
