@@ -2,6 +2,7 @@
 
 #include <iostream>
 #include <functional>
+#include <algorithm>
 
 #include <bobcat/string>
 
