@@ -2,6 +2,7 @@
 
 //#include <sys/types.h>
 #include <unistd.h>
+#include <cstdlib>
 #include <sys/wait.h>
 
 using namespace FBB;
