@@ -1,5 +1,6 @@
 #include "glob"
 
+#include <cstdlib>
 #include <bobcat/fnwrap1>
 
 using namespace std;
