@@ -1,5 +1,7 @@
 #include "mailheaders"
 
+#include <algorithm>
+
 #include <bobcat/errno>
 
 using namespace std;
