@@ -2,6 +2,7 @@
 
 #include <ostream>
 #include <iostream>
+#include <climits>
 
 using namespace std;
 using namespace FBB;
