@@ -5,8 +5,10 @@ bobcat (1.13.2)
   * Member function template implementations consisting of a single line of
     code were given the `inline' specification.
 
-  * added missing  bobcat/tablespec to table/table. Also changed leftover
+  * Added missing  bobcat/tablespec to table/table. Also changed leftover
     String into string
+
+  * Included several missing header files fixing gcc/g++ 4.3 problems
 
  -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 28 Mar 2007 14:22:16 +0200
 
